hard-gists/67effa81dd1cd5a488b4/run.log
=== Docker Run Log for 67effa81dd1cd5a488b4 ===
Started at: Mi 29. Okt 16:43:33 CET 2025

[2025-10-29 16:43:34] START: Running container for 67effa81dd1cd5a488b4
[2025-10-29 16:43:34] SUCCESS: Container 6ae78ddaba66eeb823adf172b3c4332c2dc11f81da71655b95f672f646832ca5 started for 67effa81dd1cd5a488b4
=== Container logs for 67effa81dd1cd5a488b4 ===
  File "/snippet.py", line 650
    print dnn
    ^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 67effa81dd1cd5a488b4 ===
[2025-10-29 16:43:36] INFO: Container 6ae78ddaba66eeb823adf172b3c4332c2dc11f81da71655b95f672f646832ca5 has stopped
